package Adoter.Asset;

message InnerMeta {
	optional INNER_TYPE type_t = 1;
	optional bytes stuff = 2;
}

/////////////////////////////////////////////////////
//服务器之间通用协议类型
/////////////////////////////////////////////////////
enum INNER_TYPE {
	INNER_TYPE_BEGIN = 0; //开始协议
	INNER_TYPE_REGISTER = 1; //注册服务器
	INNER_TYPE_COMMAND = 2; //GMT指令
	INNER_TYPE_COUNT = 100; //协议最大数量
}

//操作类型
enum COMMAND_TYPE {
	COMMAND_TYPE_BEGIN = 0; 
	COMMAND_TYPE_RECHARGE = 1; //充值钻石
	COMMAND_TYPE_ROOM_CARD = 2; //房卡
	COMMAND_TYPE_HUANLEDOU = 3; //欢乐豆
}

enum ERROR_CODE {
	ERROR_CODE_SUCCESS = 0; //成功
	ERROR_CODE_NO_PERMISSION = 1; //没有权限
}

enum SERVER_TYPE {
	SERVER_TYPE_BEGIN = 0;
	SERVER_TYPE_GMT = 1; //GMT服务器
	SERVER_TYPE_GAME = 2; //游戏服务器
}

message Register {
	optional INNER_TYPE type_t = 1 [default = INNER_TYPE_REGISTER];
	optional SERVER_TYPE server_type = 2; //服务器类型
	optional int64 server_id = 3; //服务器ID
}

message Command {
	optional INNER_TYPE type_t = 1 [default = INNER_TYPE_COMMAND];
	optional COMMAND_TYPE command_type = 2; //操作类型
	optional ERROR_CODE error_code = 3; //返回码

	optional bytes account = 4; //账号
	optional int64 plyaer_id = 5; //玩家角色ID
	optional int32 count = 6; //数量(根据COMMAND_TYPE有不同的意义)
}
